--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,92 @@
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+html,
 body {
-  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+html {
+  font-size: 14px;
+}
+
+body {
+  box-sizing: border-box;
+  line-height: 1.25;
+  font-family: 'Harmonia', sans-serif;
+  font-weight: 400;
+  color: #2b2b2b;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
+  width: 100%;
+  min-width: 1280px;
+  min-height: 100%;
+}
+
+.content-box-component {
+  box-sizing: content-box;
+}
+
+.visually-hidden {
+  width: 1px;
+  height: 1px;
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  margin: -1px;
   padding: 0;
+  border: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a[href],
+button {
+  cursor: pointer;
+}
+
+a,
+button,
+input {
   font-family: sans-serif;
+}
+
+img {
+  max-width: 100%;
+}
+
+[disabled] {
+  pointer-events: none;
+}
+
+[hidden] {
+  display: none;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none !important; /* stylelint-disable-line declaration-no-important */
+  -moz-appearance: textfield !important; /* stylelint-disable-line declaration-no-important*/
+  -webkit-user-select: none;
+  -webkit-user-modify: read-only;
+  margin: 0;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
 }
