--- a/src/components/AuthPage/AuthPage.css
+++ b/src/components/AuthPage/AuthPage.css
@@ -1,4 +1,5 @@
 .AuthPage {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,13 +9,22 @@
   min-height: 600px;
 }
 
+.AuthPage .particles-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
 .AuthPage .logo {
   margin-bottom: 35px;
 }
 
 .AuthPage .form {
   width: 438px;
-  background-clip: #fff;
+  background-color: #fff;
   border-radius: 7px;
   box-shadow: 1px 1px 7px #ccc;
   padding: 21px 20px 32px;
@@ -30,8 +40,7 @@
   border-radius: 7px;
   background-position: 19px 50%;
   background-repeat: no-repeat;
-  padding: 0;
-  padding-left: 54px;
+  padding: 3px 0 0 54px;
 }
 
 .AuthPage .input:not(:last-of-type) {
