--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
 }
 
 html,
-body {
+body,
+#root {
   width: 100%;
   height: 100%;
 }
@@ -17,7 +18,7 @@ html {
 body {
   box-sizing: border-box;
   line-height: 1.25;
-  font-family: 'Harmonia', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 400;
   color: #2b2b2b;
   -webkit-font-smoothing: antialiased;
