--- a/src/components/TradePage/TradePage.css
+++ b/src/components/TradePage/TradePage.css
@@ -1,3 +1,14 @@
 .TradePage {
   flex: 1;
+  background-color: #fff;
+  width: 1280px;
+  padding: 15px 40px;
+  margin: 0 auto;
+}
+
+.TradePage .section-title {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 1.17;
+  color: #1b1b1b;
 }
